WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57681
REGRESSION: Assertion failure when executing a complex custom key binding
https://bugs.webkit.org/show_bug.cgi?id=57681
Summary
REGRESSION: Assertion failure when executing a complex custom key binding
Alexey Proskuryakov
Reported
2011-04-01 16:37:13 PDT
In an attempt to make results of NSTextInput protocol methods more correct, we now execute saved commands when executing any method that returns a result (which could be stale otherwise). This means that insertText: can now be sent back to WebCore while interpreting the original RawKeyDown event - but Editor::insertText asserts that the underlying event is a Char one.
Attachments
proposed fix
(3.20 KB, patch)
2011-04-01 16:42 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-04-01 16:42:37 PDT
Created
attachment 87942
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2011-04-01 16:45:02 PDT
This doesn't address the root cause - there is still a theoretical possibility of a input source sending an insertText:, and then forcing immediate execution by asking about something. But this fixes the bug and improves performance, so it's a good thing.
Enrica Casucci
Comment 3
2011-04-01 17:07:27 PDT
Comment on
attachment 87942
[details]
proposed fix Makes perfect sense to me.
Alexey Proskuryakov
Comment 4
2011-04-01 17:29:04 PDT
Committed <
http://trac.webkit.org/changeset/82749
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug