        Reviewed by Darin Adler.

REGRESSION: Assertion failure when executing a complex custom key binding
        https://bugs.webkit.org/show_bug.cgi?id=57681

        Also completes the fix for
        <rdar://problem/9063782> WebKit2: Text fields in Safari don't honor custom key bindings

        * UIProcess/API/mac/WKView.mm: (-[WKView hasMarkedText]): There is no need to execute saved
        commands when they can't possibly change the result.



Canonical link: https://commits.webkit.org/72536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82749 268f45cc-cd09-0410-ab3c-d52691b4dbfc